@@ -2,7 +2,8 @@
         * [ADDED]: #3106 ScriptingTcl has now "tcl_init" command to invoke full interpreter initialization, which creates [clock] commands and some others. It's not invoked automatically to avoid performane issues.
         * [BUGFIX]: #3118 #3124 Fixed double precision numbers formatting.
         * [BUGFIX]: DbAndroid plugin: Fixed 'adb' automatic detection under Linux.
-        * [BUGFIX]: #3126 Fixed problem with database versions in Android plugin.
+        * [BUGFIX]: #3126 #3092 Fixed problem with database versions in Android plugin.
+        * [BUGFIX]: #3155 Fixed crash when confiriming custom FK value with Enter key.
         * [BUGFIX]: Compilation fixes.
 
 [3.1.0]
